Fix code block overflow
This takes a two-pronged approach to fixing code block overflow:
- set max-width to widescreen. This means that code blocks will overflow
  less often
- set whitespace to pre-wrap on code blocks. This means code blocks can
  wrap

--- a/_assets/css/index.scss
+++ b/_assets/css/index.scss
@@ -327,6 +327,7 @@ code {
   @include u-padding-y(1px);
   border-radius: radius('sm');
   word-wrap: break-word;
+  white-space: pre-wrap;
 }
 
 .usa-section.want-more {
